; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_cc10001_adc.c_cc10001_adc_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_cc10001_adc.c_cc10001_adc_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cc10001_adc_device = type { i32 }

@CC10001_ADC_CH_MASK = common dso_local global i32 0, align 4
@CC10001_ADC_MODE_SINGLE_CONV = common dso_local global i32 0, align 4
@CC10001_ADC_CONFIG = common dso_local global i32 0, align 4
@CC10001_ADC_START_CONV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cc10001_adc_device*, i32)* @cc10001_adc_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cc10001_adc_start(%struct.cc10001_adc_device* %0, i32 %1) #0 {
  %3 = alloca %struct.cc10001_adc_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.cc10001_adc_device* %0, %struct.cc10001_adc_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @CC10001_ADC_CH_MASK, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @CC10001_ADC_MODE_SINGLE_CONV, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %5, align 4
  %11 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %3, align 8
  %12 = load i32, i32* @CC10001_ADC_CONFIG, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @cc10001_adc_write_reg(%struct.cc10001_adc_device* %11, i32 %12, i32 %13)
  %15 = call i32 @udelay(i32 1)
  %16 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %3, align 8
  %17 = load i32, i32* @CC10001_ADC_CONFIG, align 4
  %18 = call i32 @cc10001_adc_read_reg(%struct.cc10001_adc_device* %16, i32 %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @CC10001_ADC_START_CONV, align 4
  %21 = or i32 %19, %20
  store i32 %21, i32* %5, align 4
  %22 = load %struct.cc10001_adc_device*, %struct.cc10001_adc_device** %3, align 8
  %23 = load i32, i32* @CC10001_ADC_CONFIG, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @cc10001_adc_write_reg(%struct.cc10001_adc_device* %22, i32 %23, i32 %24)
  ret void
}

declare dso_local i32 @cc10001_adc_write_reg(%struct.cc10001_adc_device*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @cc10001_adc_read_reg(%struct.cc10001_adc_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
